--- a/web/index.html
+++ b/web/index.html
@@ -5,17 +5,19 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background=anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg >
+<body>
 <nav>
-    <h1>No Game No Life</h1>
+    <div>
+        <h1>No Game No Life</h1>
+    </div>
+    <article id="left">
+        <p> The winner of each game is decided before it even begins. </p>
+    </article>
+    <aside id="right">
+        <p>Chance is never a factor.</p>
+    </aside>
 </nav>
-<article>
-    <p> The winner of each game is decided before it even begins. </p>
 
-</article>
-<aside>
-    <p>Chance is never a factor.</p>
-</aside>
 <footer></footer>
 </body>
 </html>
