--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,9 @@
         <p>Chance is never a factor.</p>
     </aside>
 </nav>
-
+<audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">
+    <source src="This%20game.mp3" type="audio/mpeg" />
+</audio>
 <footer></footer>
 </body>
 </html>
