--- a/web/index.html
+++ b/web/index.html
@@ -5,18 +5,20 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="index_body">
 <nav>
     <div>
-        <h1>No Game No Life</h1>
+        <a href="index.html">MINA</a> |
+        <a href="journey.html">JOURNEY</a> |
+        <a href="game.html">GAME</a>
     </div>
-    <article id="left">
-        <p> The winner of each game is decided before it even begins. </p>
-    </article>
-    <aside id="right">
-        <p>Chance is never a factor.</p>
-    </aside>
 </nav>
+<!--    <article id="left">-->
+<!--        <p> The winner of each game is decided before it even begins. </p>-->
+<!--    </article>-->
+<!--    <aside id="right">-->
+<!--        <p>Chance is never a factor.</p>-->
+<!--    </aside>-->
 <audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">
     <source src="This%20game.mp3" type="audio/mpeg" />
 </audio>
