--- a/web/index.html
+++ b/web/index.html
@@ -7,20 +7,15 @@
 </head>
 <body id="index_body">
 <nav>
-    <div>
+    <div id="nav">
         <a href="index.html">MINA</a> |
         <a href="journey.html">JOURNEY</a> |
         <a href="game.html">GAME</a>
     </div>
 </nav>
-<!--    <article id="left">-->
-<!--        <p> The winner of each game is decided before it even begins. </p>-->
-<!--    </article>-->
-<!--    <aside id="right">-->
-<!--        <p>Chance is never a factor.</p>-->
-<!--    </aside>-->
+
 <audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">
-    <source src="This%20game.mp3" type="audio/mpeg" />
+    <source src="This%20game.mp3" type="audio/mpeg"/>
 </audio>
 <footer></footer>
 </body>
