--- a/web/journey.html
+++ b/web/journey.html
@@ -8,16 +8,22 @@
 </head>
 <body>
 <nav>
-    <div>
+    <div id="nav">
         <a href="index.html">MINA</a> |
         <a href="journey.html">JOURNEY</a> |
         <a href="game.html">GAME</a>
     </div>
 </nav>
+<a href="SoraAndShiro.html">
+    <img src="anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg" id="SoraAndShiro">
+</a>
+<a href="RikuAndSchwi.html">
+    <img src="anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg" id="RikuAndSchwi">
+</a>
+<div class="box" id="box1"><p>In every time, in every world, the strong polish their fangs while the weak polish their wisdom.</p></div>
+<div class="box" id="box2"><p> winner of each game is decided before it even begins. </p></div>
+<div class="box" id="box3"><p>Accept that because we were born with nothing, we can become anything!</p></div>
+<div class="box" id="box4"><p>Chance is never a factor.</p></div>
 
-<div class="box"></div>
-<div class="box" id="box2"></div>
-<div class="box" id="box3"></div>
-<div class="box" id="box4"></div>
 </body>
 </html>
