--- a/web/game.html
+++ b/web/game.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
-    <div>
-        <h1>No Game No Life</h1>
-    </div>
-    <div>
+    <div id="nav">
         <a href="index.html">MINA</a> |
         <a href="journey.html">JOURNEY</a> |
         <a href="game.html">GAME</a>
