neater added the background image for journeys

--- a/web/SoraAndShiro.html
+++ b/web/SoraAndShiro.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraAndShiro</title>
+    <link rel="stylesheet" href="css/SAS.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
 
 </body>
 </html>
