--- a/web/journey.html
+++ b/web/journey.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>journey</title>
-    <link rel="stylesheet" href="journey.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/journey.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <nav>
@@ -15,15 +15,15 @@
     </div>
 </nav>
 <a href="SoraAndShiro.html">
-    <img src="anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg" id="SoraAndShiro">
+    <img src="src/SAS.jpg" id="SoraAndShiro">
 </a>
 <a href="RikuAndSchwi.html">
-    <img src="anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg" id="RikuAndSchwi">
+    <img src="src/RAS.jpg" id="RikuAndSchwi">
 </a>
-<div class="box" id="box1"><p>In every time, in every world, the strong polish their fangs while the weak polish their wisdom.</p></div>
-<div class="box" id="box2"><p> winner of each game is decided before it even begins. </p></div>
-<div class="box" id="box3"><p>Accept that because we were born with nothing, we can become anything!</p></div>
-<div class="box" id="box4"><p>Chance is never a factor.</p></div>
+<div class="box" id="box1"><p>In every time, in every world, the strong polish their fangs while the weak polish their wisdom. </p></div>
+<div class="box" id="box2"><p>Winner of each game is decided before it even begins. </p></div>
+<div class="box" id="box3"><p>Accept that because we were born with nothing, we can become anything! </p></div>
+<div class="box" id="box4"><p>Chance is never a factor. </p></div>
 
 </body>
 </html>
