--- a/web/RikuAndSchwi.html
+++ b/web/RikuAndSchwi.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>RikuAndSchwi</title>
+    <link rel="stylesheet" href="css/RAS.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
