effected added, second page repetitive content problem occur; tried inserting video but failed

--- a/web/RikuAndSchwi.html
+++ b/web/RikuAndSchwi.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="css/RAS.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
+<body onload="typeWriterRS()">
+<div id="plot1"></div>
+<div id="plot2"></div>
+<div id="plot3"></div>
 </body>
+<script src="effects.js"></script>
 </html>
