--- a/web/SoraAndShiro.html
+++ b/web/SoraAndShiro.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="css/SAS.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
-
+<body onload="typeWriterSS()">
+<div id="plot1"></div>
+<div id="plot2"></div>
+<div id="plot3"></div>
 </body>
+<script src="effects.js"></script>
 </html>
