--- a/web/index.html
+++ b/web/index.html
@@ -13,10 +13,12 @@
         <a href="game.html">GAME</a>
     </div>
 </nav>
-
-<audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">
-    <source src="This%20game.mp3" type="audio/mpeg"/>
-</audio>
+<!--<audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">-->
+<!--    <source src="This%20game.mp3" type="audio/mpeg"/>-->
+<!--</audio>-->
+<iframe width="420" height="315"
+        src="https://youtu.be/6CBp4qylX6I">
+</iframe>
 <footer></footer>
 </body>
 </html>
