--- a/web/index.html
+++ b/web/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body id="index_body">
-<nav>
-    <div id="nav">
-        <a href="index.html">MINA</a> |
-        <a href="journey.html">JOURNEY</a> |
-        <a href="game.html">GAME</a>
-    </div>
-</nav>
-<!--<audio id="background_music" autoplay = "autoplay" loop="loop" controls="controls">-->
-<!--    <source src="This%20game.mp3" type="audio/mpeg"/>-->
-<!--</audio>-->
-<iframe width="420" height="315"
-        src="https://youtu.be/6CBp4qylX6I">
-</iframe>
-<footer></footer>
+    <nav>
+        <div id="nav">
+            <a href="index.html">MINA</a> |
+            <a href="journey.html">JOURNEY</a> |
+            <a href="game.html">GAME</a>
+        </div>
+    </nav>
+    <main>
+        <h2 id="title"></h2>
+        <iframe width="60%" height="600px"
+                src="https://www.youtube.com/embed/6CBp4qylX6I?autoplay=1&mute=1" id="video">
+        </iframe>
+    </main>
+    <footer></footer>
 </body>
+<script src="Typing Effect.js"></script>
 </html>
