--- a/web/RikuAndSchwi.html
+++ b/web/RikuAndSchwi.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/RAS.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="typeWriterRS()">
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
+</style>
+<body>
 <div id="plot1"></div>
 <div id="plot2"></div>
 <div id="plot3"></div>
 </body>
-<script src="effects.js"></script>
+<script src="effects2.js"></script>
 </html>
