--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Macondo&display=swap');
+</style>
+
 <body id="index_body">
     <nav>
         <div id="nav">
             <a href="index.html">MINA</a> |
-            <a href="journey.html">JOURNEY</a> |
-            <a href="game.html">GAME</a>
+            <a href="journey.html">JOURNEY</a>
         </div>
     </nav>
     <main>
