--- a/web/SoraAndShiro.html
+++ b/web/SoraAndShiro.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="css/SAS.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="typeWriterSS()">
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
+</style>
+<body>
 <div id="plot1"></div>
 <div id="plot2"></div>
 <div id="plot3"></div>
