--- a/web/journey.html
+++ b/web/journey.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="css/journey.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
+</style>
 <body>
 <nav>
     <div id="nav">
         <a href="index.html">MINA</a> |
-        <a href="journey.html">JOURNEY</a> |
-        <a href="game.html">GAME</a>
+        <a href="journey.html">JOURNEY</a>
     </div>
 </nav>
 <a href="SoraAndShiro.html">
