updated the quickbar

--- a/BootstrapWeb/main.html
+++ b/BootstrapWeb/main.html
@@ -54,6 +54,29 @@
         </header>
         <div id="main-container">
             <main id="main-content">
+                <div id="contain-bottom"></div>
+                <div class="quick-bar">
+                    <div class="account-links">
+                        <div class="sign-in">
+                            <a href="https://www.krispykreme.com/legal/gdpr-notice">Sign in / Join rewards</a>
+                        </div>
+                    </div>
+                    <div class="store-location">
+                        <div class="navbar-toggler-icon">
+                            <div class="link-info">
+                                <a href="https://www.krispykreme.com/locate/location-search">Find a location</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="https://www.krispykreme.com/searchresults?referrerPageUrl=" class="answers-trigger">
+                        <img src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/icons/search.svg" alt="Search">
+                    </a>
+                    <div class="shop-cart">
+                        <a id="shopCartLink" href="https://www.krispykreme.com/legal/gdpr-notice">
+                            <img class="cart-image" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/shop/icons/ic-cart.svg" alt="Cart Image">
+                        </a>
+                    </div>
+                </div>
 
             </main>
         </div>
