--- a/BootstrapWeb/main.html
+++ b/BootstrapWeb/main.html
@@ -58,7 +58,7 @@
                 <div class="quick-bar">
                     <div class="account-links">
                         <div class="sign-in">
-                            <a href="https://www.krispykreme.com/legal/gdpr-notice">Sign in / Join rewards</a>
+                            <a href="https://www.krispykreme.com/account/sign-in">Sign in / Join rewards</a>
                         </div>
                     </div>
                     <div class="store-location">
@@ -72,11 +72,55 @@
                         <img src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/icons/search.svg" alt="Search">
                     </a>
                     <div class="shop-cart">
-                        <a id="shopCartLink" href="https://www.krispykreme.com/legal/gdpr-notice">
+                        <a id="shopCartLink" href="https://www.krispykreme.com/shop/cart">
                             <img class="cart-image" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/shop/icons/ic-cart.svg" alt="Cart Image">
                         </a>
                     </div>
                 </div>
+                <section class="collage">
+                    <div class="container">
+                        <div class="row align-items-start">
+                            <div class="col">
+                                <a href="https://www.krispykreme.com/shop/order-start">
+                                    <img src="https://images.krispykreme.com/75cb2cea-8e30-447f-85c4-ad7debaaba7c.png"
+                                         alt="Build your own box. Order now!">
+                                </a>
+                            </div>
+                            <div class="col">
+                                <div class="col">
+                                    <a href="https://www.krispykreme.com/more-smiles/rewards">
+                                        <img src="https://images.krispykreme.com/c765f666-0167-4c85-8c53-e3b7538cbe43.jpg">
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <a href="https://www.krispykreme.com/grocery/mini-crullers-sharing-size">
+                                        <img src="https://images.krispykreme.com/58055b93-91e4-4019-a95b-369aace0ce5b.png">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row align-items-center">
+                                <div class="col">
+                                    <a href="https://krispykreme.wgiftcard.com/responsive/personalize_responsive/chooseDesign/krispykreme/1?_ga=2.22535803.1174690357.1633450041-2123755183.1633450041">
+                                        <img src="https://images.krispykreme.com/5a544fe6-9545-465b-9517-8b0a9010ee1d.png">
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <a href="https://shopkrispykreme.com/">
+                                        <img src="https://images.krispykreme.com/a0b68df1-056a-4924-8a0e-c996d03d5d17.png">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row align-items-end">
+                                <div class="col">
+                                    One of three columns
+                                </div>
+                                <div class="col">
+                                    One of three columns
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
             </main>
         </div>
