updated a few details, problem not solved yet
was thinking of the problem of picture not stick to the right caused by the class "col" it set the size to 50% automatically  hence, not able to make the content thinner.

--- a/BootstrapWeb/main.html
+++ b/BootstrapWeb/main.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </header>
-        <div id="main-container">
+        <div class="main-container">
             <main id="main-content">
                 <div id="contain-bottom"></div>
                 <div class="quick-bar">
@@ -80,7 +80,7 @@
                 <section class="collage">
                     <div class="container">
                         <div class="row align-items-start">
-                            <div class="col">
+                            <div class="col contents">
                                 <a href="https://www.krispykreme.com/shop/order-start">
                                     <img src="https://images.krispykreme.com/75cb2cea-8e30-447f-85c4-ad7debaaba7c.png"
                                          alt="Build your own box. Order now!">
@@ -99,22 +99,22 @@
                                 </div>
                             </div>
                             <div class="row align-items-center">
-                                <div class="col">
+                                <div class="col contents">
                                     <a href="https://krispykreme.wgiftcard.com/responsive/personalize_responsive/chooseDesign/krispykreme/1?_ga=2.22535803.1174690357.1633450041-2123755183.1633450041">
                                         <img src="https://images.krispykreme.com/5a544fe6-9545-465b-9517-8b0a9010ee1d.png">
                                     </a>
                                 </div>
-                                <div class="col">
+                                <div class="col contents">
                                     <a href="https://shopkrispykreme.com/">
                                         <img src="https://images.krispykreme.com/a0b68df1-056a-4924-8a0e-c996d03d5d17.png">
                                     </a>
                                 </div>
                             </div>
                             <div class="row align-items-end">
-                                <div class="col">
+                                <div class="col contents">
                                     One of three columns
                                 </div>
-                                <div class="col">
+                                <div class="col contents">
                                     One of three columns
                                 </div>
                             </div>
