added the follow part; fixed the alignment thing --> using width;

--- a/BootstrapWeb/main.html
+++ b/BootstrapWeb/main.html
@@ -50,43 +50,55 @@
                         </li>
                     </ul>
                 </div>
+                <div class="background-pattern" style="overflow: hidden;"></div>
+            </div>
+            <div id="contain-button">
+                <button>
+                    <img class="split-cta-delivery" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/delivery.png" alt="">
+                    <span class="split-cta-line1">Order</span>
+                    <span class="split-cta-line2">Delivery</span>
+                </button>
+                <button>
+                    <img class="split-cta-pickup" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/pickup-icon.png" alt="">
+                    <span class="split-cta-line1">Order</span>
+                    <span class="split-cta-line2">Pickup</span>
+                </button>
+            </div>
+            <div class="quick-bar">
+                <div class="account-links">
+                    <div class="sign-in">
+                        <a href="https://www.krispykreme.com/account/sign-in">Sign in / Join rewards</a>
+                    </div>
+                </div>
+                <div class="store-location">
+                    <div class="navbar-toggler-icon">
+                        <div class="link-info">
+                            <a href="https://www.krispykreme.com/locate/location-search">Find a location</a>
+                        </div>
+                    </div>
+                </div>
+                <a href="https://www.krispykreme.com/searchresults?referrerPageUrl=" class="answers-trigger">
+                    <img src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/icons/search.svg" alt="Search">
+                </a>
+                <div class="shop-cart">
+                    <a id="shopCartLink" href="https://www.krispykreme.com/shop/cart">
+                        <img class="cart-image" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/shop/icons/ic-cart.svg" alt="Cart Image">
+                    </a>
+                </div>
             </div>
         </header>
         <div class="main-container">
             <main id="main-content">
-                <div id="contain-bottom"></div>
-                <div class="quick-bar">
-                    <div class="account-links">
-                        <div class="sign-in">
-                            <a href="https://www.krispykreme.com/account/sign-in">Sign in / Join rewards</a>
-                        </div>
-                    </div>
-                    <div class="store-location">
-                        <div class="navbar-toggler-icon">
-                            <div class="link-info">
-                                <a href="https://www.krispykreme.com/locate/location-search">Find a location</a>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="https://www.krispykreme.com/searchresults?referrerPageUrl=" class="answers-trigger">
-                        <img src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/icons/search.svg" alt="Search">
-                    </a>
-                    <div class="shop-cart">
-                        <a id="shopCartLink" href="https://www.krispykreme.com/shop/cart">
-                            <img class="cart-image" src="https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/shop/icons/ic-cart.svg" alt="Cart Image">
-                        </a>
-                    </div>
-                </div>
                 <section class="collage">
                     <div class="container">
-                        <div class="row align-items-start">
+                        <div class="row align-items-start" >
                             <div class="col contents">
                                 <a href="https://www.krispykreme.com/shop/order-start">
                                     <img src="https://images.krispykreme.com/75cb2cea-8e30-447f-85c4-ad7debaaba7c.png"
                                          alt="Build your own box. Order now!">
                                 </a>
                             </div>
-                            <div class="col">
+                            <div class="col w-25">
                                 <div class="col">
                                     <a href="https://www.krispykreme.com/more-smiles/rewards">
                                         <img src="https://images.krispykreme.com/c765f666-0167-4c85-8c53-e3b7538cbe43.jpg">
@@ -104,24 +116,58 @@
                                         <img src="https://images.krispykreme.com/5a544fe6-9545-465b-9517-8b0a9010ee1d.png">
                                     </a>
                                 </div>
-                                <div class="col contents">
+                                <div class="col contents w-25">
                                     <a href="https://shopkrispykreme.com/">
-                                        <img src="https://images.krispykreme.com/a0b68df1-056a-4924-8a0e-c996d03d5d17.png">
+                                        <img src="https://images.krispykreme.com/a0b68df1-056a-4924-8a0e-c996d03d5d17.png" >
                                     </a>
                                 </div>
                             </div>
-                            <div class="row align-items-end">
-                                <div class="col contents">
-                                    One of three columns
+                            <div class="follow row align-items-start">
+                                <div class="contents" id="block">
+                                    <div class="title">
+                                        <em><span id="fl">Follow<br></span></em>
+                                        <strong><span id="ctl00_plcMain_ppcSocial_lt_zoneSocial_KKD_SocialPromo_lblSubheading">For Smiles</span></strong>
+                                        <ul class="social-media">
+                                            <li>
+                                                <a href="https://www.instagram.com/krispykreme/" target="_blank" class="fa fa-instagram" title="Follow Krispy Kreme on Instagram">
+                                                    <span class="sr-only">Follow Krispy Kreme on Instagram</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://twitter.com/krispykreme" target="_blank" class="fa fa-twitter" title="Follow Krispy Kreme on Twitter">
+                                                    <span class="sr-only">Follow Krispy Kreme on Twitter</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.facebook.com/KrispyKreme" target="_blank" class="fa fa-facebook" title="Follow Krispy Kreme on Facebook">
+                                                    <span class="sr-only">Follow Krispy Kreme on Facebook</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col contents">
-                                    One of three columns
+                                    <a href="https://www.krispykreme.com/locate">
+                                        <img id="dddd" src="https://images.krispykreme.com/f8391149-1dfe-4b26-a5e4-a212a525cf7b.jpg" alt="	Hot Light - When It's On, It's On">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </section>
-
+                <section class="promote container">
+                    <div class="promo-row">
+                        <div class="copy">
+                            <em>Sweet Surprises<br></em>
+                            <strong>EARN REWARDS ON THE GO<br></strong>
+                            <p>With the Krispy Kreme app, you're never far away from a delicious reward.</p>
+                            <a class="btn btn-secondary shadow" href="https://www.krispykreme.com/more-smiles/rewards">Start Earning</a>
+                        </div>
+                        <div class="image">
+                            <img aria-hidden="true" src="https://images.krispykreme.com/44e28fc0-2399-4baa-b4b6-98fbc6f8a1bf.png">
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </div>
