--- a/BootstrapWeb/main.html
+++ b/BootstrapWeb/main.html
@@ -164,11 +164,100 @@
                             <a class="btn btn-secondary shadow" href="https://www.krispykreme.com/more-smiles/rewards">Start Earning</a>
                         </div>
                         <div class="image">
-                            <img aria-hidden="true" src="https://images.krispykreme.com/44e28fc0-2399-4baa-b4b6-98fbc6f8a1bf.png">
+                            <img src="https://images.krispykreme.com/44e28fc0-2399-4baa-b4b6-98fbc6f8a1bf.png">
                         </div>
                     </div>
                 </section>
             </main>
+            <footer>
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <td>
+                            <a href="https://www.krispykreme.com/locate/all-locations" target="">
+                                <span class="sr-only">All Locations
+                                </span>All Locations
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/legal/accessibilitypolicy" target="">
+                                <span class="sr-only">Accessibility Policy
+                                </span>Accessibility Policy
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://investors.krispykreme.com" target="">
+                                <span class="sr-only">Investors
+                                </span>Investors
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.krispykreme.com/About" target="">
+                                <span class="sr-only">About Us
+                                </span>About Us
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/legal/terms-of-use" target="">
+                                <span class="sr-only">Terms of Use
+                                </span>Terms of Use
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/sustainability" target="">
+                                <span class="sr-only">Sustainability
+                                </span>Sustainability
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://apply.jobappnetwork.com/krispy" target=""><span class="sr-only">Careers</span>Careers
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/legal/privacy-policy" target=""><span class="sr-only">Privacy</span>Privacy
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/sitemap" target=""><span class="sr-only">Sitemap</span>Sitemap
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.krispykreme.com/About/Contact-Us" target=""><span class="sr-only">Need Help?</span>Need Help?
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/legal/california-supply-chains-act" target=""><span class="sr-only">CA Supply Chains Act</span>CA Supply Chains Act
+                            </a>
+                        </td>
+                        <td>
+                            <a href="https://www.krispykreme.com/statementonukraine" target=""><span class="sr-only">Statement on Ukraine</span>Statement on Ukraine
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <ul class="social-media">
+                    <li>
+                        <a href="https://www.instagram.com/krispykreme/" target="_blank" class="fa-instagram" title="Follow Krispy Kreme on Instagram"><span class="sr-only">Follow Krispy Kreme on Instagram</span></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/krispykreme" target="_blank" class="fa-twitter" title="Follow Krispy Kreme on Twitter"><span class="sr-only">Follow Krispy Kreme on Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/KrispyKreme" target="_blank" class="fa-facebook" title="Follow Krispy Kreme on Facebook"><span class="sr-only">Follow Krispy Kreme on Facebook</span></a>
+                    </li>
+                </ul>
+                <div class="copyright">
+                    Copyright 2022 Krispy Kreme Doughnut Corp.
+                </div>
+            </footer>
+
         </div>
     </div>
 
